# ice-melt-models

./: README.md  icemeltmodels.py  pyproject.toml
.github/workflows/: ci.yml
examples/: budgets.ipynb  melt_model_examples.ipynb  melt_model_explanations.ipynb
notebooks/: budgets.ipynb
tests/: test_icemeltmodels.py
