[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "icemeltmodels"
version = "0.0.1"
dependencies = [
    "numpy>=1.21"
]
authors = [
  { name="Oscar Tovey Garcia", email="otoveyg@gmail.com" },
]
description = "Python implementations of ice melt models for estimating the melt rate at an ice sheet-ocean interface."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/oscarjtg/ice-melt-models"
Issues = "https://github.com/oscarjtg/ice-melt-models/issues"